# pytorch-ruff-mypy-devcontainer

./: .pre-commit-config.yaml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
