[tool.poetry]
name = "pytorch-2-0-test"
version = "0.1.0"
description = ""
authors = ["PKramek <peterkramek@gmail.com>"]
readme = "README.md"
packages = [{include = "pytorch_2_0_test"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
