[tool.poetry]
name = "TODO"
version = "0.1.0"
description = ""
authors = ["PKramek <peterkramek@gmail.com>"]
readme = "README.md"
packages = [{include = "TODO"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "2.0.0"
pre-commit = "^3.7.0"
ruff = "^0.4.3"
mypy = "^1.10.0"
pydantic = "^2.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
